# uni-scrapper

./: .gitignore  README.md  next.config.ts  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: download.rs
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: downloader.ts  fetcher.ts  image.ts  parser.ts  scraper.ts  types.ts
