[package]
name = "app"
version = "0.1.0"
description = "UniScraper Desktop"
authors = ["Stillalv"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["default-tls"] }
futures = "0.3"
tokio = { version = "1", features = ["time"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
printpdf = { version = "0.7", features = ["embedded_images"] }
image = "0.24"
